# mai-cli

./: Dockerfile  README.md  SKILL.md  buyer-demo.json  clawhub.json  docker-compose.yml  hermes-buyer.json  marketplace.example.env  openclaw-seller.json  package.json  pyproject.toml  seller-demo.json
agents/: openai.yaml
docs/: agent-protocol.md  architecture.md  migration-from-mai.md
docs/superpowers/specs/: 2026-05-03-mai-design.md  (+1 more)
mai_cli/: __init__.py  cli.py  config.py
mai_cli/adapters/: diagnostics.py  hermes.py  mai_legacy.py  openclaw.py
mai_cli/agents/: buyer_cli.py  merchant_agent.py  merchant_daemon.py  tools.py
mai_cli/api/: app.py  routes_agents.py  routes_conversations.py  routes_marketplace.py  routes_merchants.py
mai_cli/core/: catalog.py  channels.py  conversations.py  delivery.py  harness.py
mai_cli/db/: models.py  session.py
mai_cli/llm/: __init__.py  dispatcher.py  prompts.py  providers.py  runner.py
plugins/mai-plugin/: README.md  openclaw.plugin.json  openclaw_compat.js  package.json
references/: data-schema.md  public-deployment.md  registry-api.md  transaction-model.md
scripts/: install.sh  mai.py  mai_agent.py  mai_api.py  mai_registry.py  verify.sh
tests/: mai_plugin.test.mjs  test_adapter_lifecycle.py  test_agent_daemon.py  test_agent_tools.py  test_cli.py  test_cli_contract.py  test_conversations_agent.py  test_host_adapter_api_e2e.py  test_host_adapter_e2e.py  test_install.py  test_llm_contract.py  test_mai_cli_mvp.py  test_orchestration_harness.py  test_project_shape.py  test_public_marketplace.py  test_registry.py
(+2 files in other folders)
