[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mai-cli"
version = "2.0.0"
description = "Standalone local-commerce AI consultation marketplace runtime"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "pydantic>=2",
  "uvicorn>=0.27",
]

[project.scripts]
mai-cli = "mai_cli.cli:main"

[project.optional-dependencies]
api = [
  "fastapi>=0.110",
  "pydantic>=2",
  "uvicorn>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mai_cli*"]
